--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,12 +1,10 @@
-
 //Colors
 
 $font1: 'Arial';
-$font2: 'Impact';
 
 $palettes: (
     primary: (
-      base: #318974,
+      base: #FFFFFF,
     ),
     secondary: (
         base:   #D2F7C9,
