--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 //Colors
 
 $font1: 'Arial';
+$border-radius: 5px;
 
 $palettes: (
     primary: (
@@ -12,6 +13,11 @@ $palettes: (
     ),
     accent: (
         base:    #318974,
+        lighter: lighten(#318974, 5%)
+    ),
+    black: (
+      base: rgb(0,0,0),
+      lighter: rgb(42,42,42)
     ),
     success: (
       base: #43e86a,
