Updated page default styling

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -21,6 +21,9 @@
   border-radius: 5px;
   box-shadow: 1px 1px 3px grey;
 }
+@mixin page{
+  padding: 25px;
+}
 
 @mixin breakpoint($point) {
   @if $point == desktop {
