--- a/src/components/ProfileIntro/ProfileIntro.module.scss
+++ b/src/components/ProfileIntro/ProfileIntro.module.scss
@@ -4,11 +4,12 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    margin: 50px;
+    align-items: center;
     gap: 5vw;
 
     @include breakpoint(tablet) {
         flex-direction: row;
+        align-items: flex-start;
     }
 }
 .info {
