--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $palettes: (
     ),
     secondary: (
         base:   #D2F7C9,
-        lighter: #F6FFF4
+        lighter: darken(#F6FFF4, 5%)
     ),
     accent: (
         base:    #318974,
