--- a/src/components/TopMenu/TopMenu.module.scss
+++ b/src/components/TopMenu/TopMenu.module.scss
@@ -6,7 +6,9 @@
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  height: 55px;
+  position: sticky;
+  top: 0;
+  height: 5vh;
   padding: 15px;
   background-color: color(black, lighter);
   color: color(primary, base);
