ProfileReviews component and added button to CourseCard component

--- a/src/components/CourseCard/CourseCard.module.scss
+++ b/src/components/CourseCard/CourseCard.module.scss
@@ -5,35 +5,27 @@
     @include component;
     display: flex;
     flex-direction: column;
-    margin: 10px;
     background-color: color(secondary, lighter);
-  
   }
-
   .intro{
     display: flex;
     flex-grow: 1;
     justify-content: space-between;
   }
-  
-  
   .course{
     display: flex;
     @include flexCenter;
     gap: 2rem;
   }
-  
   .selected{
     border-top: 1px solid color(accent, base);
   }
-
   .icons{
     @include flexCenter;
-    
+    gap: 1rem;
   }
-
   .carets{
-    font-size: 40px;
+    font-size: 35px;
     color: color(accent, base);
     cursor: pointer;
     @include flexCenter;
@@ -42,31 +34,42 @@
         margin-left: 50px;
     }
   }
-
   .info {
     border-top: 1px solid color(accent, base);
     padding: 15px 0px;
   }
-
+  .buttonWrapper{
+    display: flex;
+    padding-right: 5px;
+  }
+  .button{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    margin: 10px 0;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: color(accent, base);
+  
+    &:hover{
+      color: white;
+    }
+  }
 .heading{
     @include headingBig;
 }
-
 .heading3{
     @include text;
 }
-
 .subheading{
     @include smallText;
     color: color(accent, base);
 }
-
 .extended{
   overflow: hidden;
   max-height: 1000px;
   transition: 1s;
 }
-
 .hidden{
   max-height: 0;
   transition: 0.5s;
