Revieved ProfileReviewsComponent PR and added some changes

--- a/src/components/CourseCard/CourseCard.module.scss
+++ b/src/components/CourseCard/CourseCard.module.scss
@@ -38,21 +38,19 @@
     border-top: 1px solid color(accent, base);
     padding: 15px 0px;
   }
-  .buttonWrapper{
-    display: flex;
-    padding-right: 5px;
-  }
+
   .button{
     display: flex;
     flex-grow: 1;
     justify-content: center;
-    margin: 10px 0;
+    margin-top: 50px;
     border-radius: 10px;
     padding: 15px;
     background-color: color(accent, base);
-  
+    color: color(primary, base);
+
     &:hover{
-      color: white;
+      background-color: lighten(color(accent, base), 5%);
     }
   }
 .heading{
@@ -66,6 +64,8 @@
     color: color(accent, base);
 }
 .extended{
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   max-height: 1000px;
   transition: 1s;
