--- a/src/components/CourseCard/CourseCard.module.scss
+++ b/src/components/CourseCard/CourseCard.module.scss
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     background-color: color(secondary, lighter);
+    border-radius: 10px;
+    box-shadow: 1px 1px 3px grey;
   }
   .intro{
     display: flex;
