--- a/src/components/SessionList/SessionList.module.scss
+++ b/src/components/SessionList/SessionList.module.scss
@@ -6,6 +6,12 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 10px;
+    
+    
+    @include breakpoint(tablet) {
+        align-items: flex-start;
+        width: 100%;
+    }
   }
   .heading2{
     @include headingMedium
