--- a/src/pages/SessionsPage/SessionsPage.module.scss
+++ b/src/pages/SessionsPage/SessionsPage.module.scss
@@ -1,4 +1,6 @@
 @import "../../styles/abstracts/_mixins.scss";
 @import "../../styles/abstracts/_variables.scss";
 
-
+.page{
+    @include page;
+  }
