--- a/src/components/CalendarCard/CalendarCard.module.scss
+++ b/src/components/CalendarCard/CalendarCard.module.scss
@@ -4,18 +4,23 @@
 .card{
     display: flex;
     flex-direction: row;
-    flex-basis: 10%;
     border-radius: 10px;
     box-shadow: 1px 1px 3px grey;
-    min-width: 225px;
+    min-width: 244px;
     white-space: nowrap;
-    overflow:hidden;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @include breakpoint(tablet) {
-      flex-basis: 45%;
+      flex-basis: 46.5%;
+    }
+    @include breakpoint(laptop) {
+      min-width: 190px;
+      flex-basis: 30%;
     }
     @include breakpoint(desktop) {
-      flex-basis: 20%;
+      width: 100%;
+      flex-basis: 22%;
     }
   }
 
