--- a/src/components/HomeCalendar/HomeCalendar.module.scss
+++ b/src/components/HomeCalendar/HomeCalendar.module.scss
@@ -4,7 +4,6 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     margin: 10px;
     width: 100%;
   }
@@ -12,15 +11,13 @@
       display: flex;
       flex-direction: column;
       justify-content: left;
-      align-items: center;
       flex-wrap: wrap;
       gap: 20px;
-      max-width: 100%;
+      width: 100%;
       
       @include breakpoint(tablet) {
           flex-direction: row;
           align-items: flex-start;
-          flex-basis: 50%;
       }
   }
   .heading2 {
