--- a/src/components/ProfileIntro/ProfileIntro.module.scss
+++ b/src/components/ProfileIntro/ProfileIntro.module.scss
@@ -4,20 +4,37 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 5vw;
-
+    flex-wrap: wrap;
+    gap:5vw;
+    width: 100%;
     @include breakpoint(tablet) {
         flex-direction: row;
         align-items: flex-start;
+        justify-content: space-between;
     }
 }
 .info {
     display: flex;
     flex-direction: column;
+    min-width: 300px;
 }
-.image {
-    min-width: 50%;
+.stars{
+  font-size: 1.3rem;
+  margin-top: -5px;
+  margin-bottom: 10px;
+}
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  @include breakpoint(tablet){
+    width: 50%;
+  }
+
+}
+.image{
+
 }
 .heading {
     @include headingBig;
