--- a/src/components/ReviewCard/ReviewCard.module.scss
+++ b/src/components/ReviewCard/ReviewCard.module.scss
@@ -10,6 +10,7 @@
   max-width: 650px;
   background-color: color(secondary, lighter);
   margin: 50px 0;
+  @include hoverComponent;
 }
 .info{
   display: flex;
