--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -26,6 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px;
   width: 100%;
   max-width: 1000px;
   padding: 10px;
