--- a/src/components/CourseCard/CourseCard.module.scss
+++ b/src/components/CourseCard/CourseCard.module.scss
@@ -6,8 +6,11 @@
     display: flex;
     flex-direction: column;
     background-color: color(secondary, lighter);
+    gap: 10px;
+    width: 100%;
+    margin-top: 10px;
     border-radius: 10px;
-    box-shadow: 1px 1px 3px grey;
+    box-shadow: 1px 1px 5px grey;
 
     @include hoverComponent;
   }
