--- a/src/components/ProfileCourses/ProfileCourses.module.scss
+++ b/src/components/ProfileCourses/ProfileCourses.module.scss
@@ -5,7 +5,58 @@
   width: 100%;
   margin-top: 25px;
 }
-
+.header {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: space-between;
+  @include flexCenter;
+}
 .heading2 {
-    @include headingMedium;
+  display: flex;
+  width: 100%;
+  @include headingMedium;
+}
+.icon{
+  display: flex;
+  font-size: 32px;
+  color: color(accent, base);
+  width: 9%;
+  @include breakpoint(laptop){
+    width: 6%;
+  }
+  &:hover{
+    color: lighten(color(accent, base), 20%);
+  }
+}
+.form {
+  @include headingMedium;
+  color: color(accent, base);
+}
+.formHeading {
+  @include headingBig;
+  border-bottom: 1px solid color(accent, base);
+  margin-bottom: 15px;
+}
+.formInputs {
+  width: 100%;
+  background-color: color(secondary, base);
+  box-shadow: none;
+  border-color: color(accent, base);
+  border-radius: 10px;
+  min-height: 50px;
+  color: color(accent, base);
+  margin: 5px;
+  padding: 10px;
+}
+.submit {
+    color: lighten(color(secondary, base), 20%);
+    background-color: color(accent, base);
+    min-width: 220px;
+    max-width: 40%;
+    padding: 10px 30px;
+    text-align: center;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: 0;
 }
