--- a/src/components/CourseSearchResult/CourseSearchResult.module.scss
+++ b/src/components/CourseSearchResult/CourseSearchResult.module.scss
@@ -8,6 +8,9 @@
   margin-bottom: 10px;
 
 }
+.selected{
+  background-color: color(secondary, base);
+}
 .intro{
   display: flex;
   justify-content: space-between;
@@ -15,6 +18,9 @@
   overflow: hidden;
   cursor: pointer;
 
+}
+.name{
+  font-weight: bold;
 }
 .right{
   display: flex;
