--- a/src/components/TopMenu/TopMenu.module.scss
+++ b/src/components/TopMenu/TopMenu.module.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   position: sticky;
   top: 0;
-  height: 5vh;
+  height: 50px;
   padding: 15px;
   background-color: color(black, lighter);
   color: color(primary, base);
