--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,3 +19,10 @@ a{
   color: inherit;
   text-decoration: none;
 }
+
+.auth-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
