--- a/src/pages/SessionPage/SessionPage.module.scss
+++ b/src/pages/SessionPage/SessionPage.module.scss
@@ -2,5 +2,10 @@
 @import "../../styles/abstracts/_variables.scss";
 
 .page{
-  @include page;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  max-width: 1000px;
+  padding: 10px;
+  margin: 0 auto;
 }
