--- a/src/components/CourseCard/CourseCard.module.scss
+++ b/src/components/CourseCard/CourseCard.module.scss
@@ -5,19 +5,20 @@
     @include component;
     display: flex;
     flex-direction: column;
+
     background-color: color(secondary, lighter);
-    gap: 10px;
     width: 100%;
-    margin-top: 10px;
+    margin: 10px 0;
     border-radius: 10px;
     box-shadow: 1px 1px 5px grey;
-
-    @include hoverComponent;
+    cursor: pointer;
   }
   .intro{
     display: flex;
     flex-grow: 1;
     justify-content: space-between;
+    align-items: center;
+    height: 50px;
   }
   .course{
     display: flex;
