--- a/src/components/HomeSessions/HomeSessions.module.scss
+++ b/src/components/HomeSessions/HomeSessions.module.scss
@@ -18,6 +18,26 @@
 .empty{
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  @include breakpoint(tablet){
+    justify-content: flex-start;
+  }
+}
+.placeholderText{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-basis: 100%;
+  gap: 15px;
+  padding: 50px 15px;
+
+  @include breakpoint(tablet){
+    flex-basis: 50%;
+  }
 }
 .button{
   display: flex;
@@ -35,8 +55,10 @@
   }
 }
 .link{
-  @include headingMedium
+  color: color(accent, base);
+  text-decoration: underline;
 }
 .image{
-  width: 100%;
+  flex-basis: 50%;
+  max-width: 280px;
 }
