--- a/src/components/PopUpComponent/PopUp.module.scss
+++ b/src/components/PopUpComponent/PopUp.module.scss
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: lightgray;
+    background-color: rgba(color(primary, darker), 80%);
 }
 .popupInner {
     position: relative;
@@ -20,6 +20,7 @@
     background-color: lighten(color(secondary, base), 11%);
     box-shadow: 1px 1px 3px grey;
     border-radius: 10px;
+
 }
 .popupInner .closeBtn {
     position: absolute;
