--- a/src/pages/SessionPage/SessionPage.module.scss
+++ b/src/pages/SessionPage/SessionPage.module.scss
@@ -2,10 +2,5 @@
 @import "../../styles/abstracts/_variables.scss";
 
 .page{
-  align-items: center;
-  gap: 30px;
-  width: 100%;
-  max-width: 1000px;
-  padding: 10px;
-  margin: 0 auto;
+  @include page;
 }
