--- a/src/components/CourseSearchResult/CourseSearchResult.module.scss
+++ b/src/components/CourseSearchResult/CourseSearchResult.module.scss
@@ -31,7 +31,13 @@
   flex-direction: column;
   align-items: flex-end;
 }
-
+.costWrapper{
+  display: flex;
+  gap: 30px;
+}
+.cost{
+  font-weight: bold;
+}
 .icon{
   padding: 0 15px 0 50px;
   font-size: 1.5rem;
